# sdg

./: .gitignore  .markdownlint-cli2.yaml  .pylintrc  .spellcheck-en-custom.txt  .spellcheck.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  constraints-dev.txt  constraints-dev.txt.in  constraints.txt  pyproject.toml  requirements-dev-gpu.txt  requirements-dev.txt  requirements-files.in  requirements.txt  tox.ini
.github/: dependabot.yml  mergify.yml
.github/ISSUE_TEMPLATE/: bug_report.md  team_recommend.md
.github/workflows/: actionlint.dockerfile  actionlint.yml  constraints-update.yml  docs.yml  e2e-nvidia-a10g-x1.yml  e2e-nvidia-a10g-x4.yml  e2e-nvidia-l4-x1.yml  e2e-nvidia-l40s-x4-release.yml  e2e-nvidia-l40s-x4.yml  e2e-nvidia-t4-x1.yml  e2e.yml  functional-gpu-nvidia-t4-x1.yml  lint.yml  pypi.yaml  spellcheck.yml  stale_bot.yml  test.yml
docs/: FAQ.md  README.md  ci.md  data_mixing.md  dataset_formats.md  pipeline_config.md  release-strategy.md  sdg_design.md  subset_selection.md  teacher_model_validation.md  upgrading_from_v0.6.x_to_v0.7.x.md
docs/examples/: README.md
result/: knowledge_recipe_2025-04-09T05_50_55.yaml  knowledge_train_msgs_2025-04-09T05_50_55.jsonl  skills_recipe_2025-04-09T05_50_55.yaml  skills_train_msgs_2025-04-09T05_50_55.jsonl
result/node_datasets_2025-04-09T05_50_55/: knowledge_legal_theft_p07.jsonl  knowledge_legal_theft_p10.jsonl  knowledge_legal_theft_task.yaml
results/2025-04-09_062004/: messages_2025-04-09T06_20_15.jsonl  train_2025-04-09T06_20_15.jsonl
results/Helnski_opus/: knowledge_recipe_2025-04-09T06_20_15.yaml  knowledge_train_msgs_2025-04-09T06_20_15.jsonl  skills_recipe_2025-04-09T06_20_15.yaml  skills_train_msgs_2025-04-09T06_20_15.jsonl  test_2025-04-09T06_20_15.jsonl
results/nllb_model/: knowledge_recipe_2025-04-09T13_37_52.yaml  knowledge_train_msgs_2025-04-09T13_37_52.jsonl  messages_2025-04-09T13_37_52.jsonl  skills_recipe_2025-04-09T13_37_52.yaml  skills_train_msgs_2025-04-09T13_37_52.jsonl  train_2025-04-09T13_37_52.jsonl
scripts/: kfp_compile.py  test_freeform_skills.py  test_grounded_skills.py  test_knowledge.py  validate_pipelines.py
src/instructlab/: __init__.py
src/instructlab_sdg/: __init__.py  generate_data.py  utils.py
tests/: conftest.py  mockllmblock.py  taxonomy.py  test_checkpointing.py  test_chunkers.py  test_chunking.py  test_datamixing.py  test_default_flows.py  test_default_pipeline_configs.py  test_filterblock.py  test_generate_data.py  test_importblock.py  test_iterblock.py  test_knowledge.py  test_llmblock.py  test_models.py  test_pipeline.py  test_registry.py  test_sample_populator_block.py  test_sdg.py  test_subset_selection.py  test_taxonomy.py  test_utilblocks.py  test_utils.py
tests/functional/: conftest.py  llama_cpp_helpers.py  test_chunkers.py  test_custom_block.py  test_examples.py  test_full_pipeline.py  test_granular_api.py  test_imports.py  test_kfp_api.py  test_simple_pipeline.py  test_subset_selection.py
(+202 files in other folders)
